--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "madbot",
   "version": "1.0.0",
   "description": "Playing around with TypeScript",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ."
@@ -12,6 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.4.1",
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.6"
   }
 }
