--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
+    "@keyv/mongo": "^1.1.0",
+    "date-fns": "^2.16.1",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "keyv": "^4.0.3",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
