--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "mongoose": "^5.10.11",
-    "typescript": "^4.0.5"
+    "mongo": "^0.1.0",
+    "mongodb": "^3.6.2",
+    "mongojs": "^3.1.0",
+    "typescript": "^4.0.5",
+    "uninstall": "0.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.6"
