--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongo": "^0.1.0",
     "mongodb": "^3.6.2",
     "mongojs": "^3.1.0",
+    "moongoose": "0.0.5",
     "typescript": "^4.0.5",
     "uninstall": "0.0.0"
   },
