--- a/package.json
+++ b/package.json
@@ -5,27 +5,25 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ."
+    "dashstart": "nodemon ./dist/dashboard/server.js",
+    "botstart": "./dist/src/index.js"
   },
   "keywords": [],
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
     "@keyv/mongo": "^1.1.0",
-    "date-fns": "^2.16.1",
     "discord.js": "^12.4.1",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
-    "mongo": "^0.1.0",
-    "mongodb": "^3.6.2",
-    "mongojs": "^3.1.0",
-    "moongoose": "0.0.5",
-    "typescript": "^4.0.5",
-    "uninstall": "0.0.0"
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@types/node": "^14.14.6"
+    "@types/node": "^14.14.6",
+    "nodemon": "^2.0.6"
   }
 }
