--- a/package.json
+++ b/package.json
@@ -2,28 +2,33 @@
   "name": "madbot",
   "version": "1.0.0",
   "description": "Playing around with TypeScript",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dashstart": "nodemon ./dist/dashboard/server.js",
-    "botstart": "./dist/src/index.js"
+    "dashstart:dev": "node ./dist/dashboard/server.js",
+    "dashstart": "nodemon --watch src -e ts,ejs --exec npm run dashstart:dev",
+    "botstart": "node ./dist/src/index.js"
   },
   "keywords": [],
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
     "@keyv/mongo": "^1.1.0",
+    "@types/express": "^4.17.9",
+    "@types/shelljs": "^0.8.8",
     "discord.js": "^12.4.1",
-    "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "shelljs": "^0.8.4",
     "typescript": "^4.0.5"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/node": "^14.14.6",
+    "dotenv": "^8.2.0",
     "nodemon": "^2.0.6"
   }
 }
