Starting DashBoard. Added Req Session and have access to the users guild

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
     "removeComments": true,
     "strictNullChecks": false,
     "alwaysStrict": true,
-    "watch": true
+    "watch": true,
+    "typeRoots": ["node_modules/@types"]
   },
   "lib": ["esnext"]
 }
