--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dashstart:dev": "node ./dist/dashboard/server.js",
-    "dashstart": "nodemon --watch src -e ts,ejs --exec npm run dashstart:dev",
+    "dashstart": "nodemon --watch dashboard -e ts,ejs --exec npm run dashstart:dev",
     "botstart": "node ./dist/src/index.js"
   },
   "keywords": [],
@@ -15,15 +15,22 @@
   "dependencies": {
     "@keyv/mongo": "^1.1.0",
     "@types/express": "^4.17.9",
+    "@types/express-session": "^1.17.2",
+    "@types/form-urlencoded": "^2.0.1",
+    "@types/node-fetch": "^2.5.7",
     "@types/shelljs": "^0.8.8",
     "discord.js": "^12.4.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "form-urlencoded": "^4.2.1",
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "node-fetch": "^2.6.1",
     "shelljs": "^0.8.4",
-    "typescript": "^4.0.5"
+    "typescript": "^4.0.5",
+    "util": "^0.12.3"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
