--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "form-urlencoded": "^4.2.1",
+    "join": "^3.0.0",
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "node-fetch": "^2.6.1",
+    "opusscript": "0.0.7",
     "shelljs": "^0.8.4",
     "typescript": "^4.0.5",
     "util": "^0.12.3"
