Havent worked on in a while - Just prepairing DashBoard and fixed eval command

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@types/form-urlencoded": "^2.0.1",
     "@types/node-fetch": "^2.5.7",
     "@types/shelljs": "^0.8.8",
-    "discord.js": "^12.4.1",
+    "connect-mongo": "^3.2.0",
+    "connect-mongodb-session": "^2.4.1",
+    "discord.js": "github:discordjs/discord.js#pull/4874/head",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -28,6 +30,7 @@
     "keyv": "^4.0.3",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "mongoose": "^5.10.15",
     "node-fetch": "^2.6.1",
     "opusscript": "0.0.7",
     "shelljs": "^0.8.4",
