Added Timed Mutes

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/shelljs": "^0.8.8",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
-    "discord.js": "github:discordjs/discord.js#pull/4874/head",
+    "discord.js": "^12.5.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
@@ -31,6 +31,7 @@
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
     "mongoose": "^5.10.15",
+    "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "opusscript": "0.0.7",
     "shelljs": "^0.8.4",
