--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@types/form-urlencoded": "^2.0.1",
     "@types/node-fetch": "^2.5.7",
     "@types/shelljs": "^0.8.8",
+    "canvas": "^2.6.1",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
-    "discord.js": "^12.5.0",
+    "discord.js": "^12.5.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
