--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "opusscript": "0.0.7",
     "shelljs": "^0.8.4",
     "typescript": "^4.1.2",
-    "util": "^0.12.3"
+    "util": "^0.12.3",
+    "ytdl-core": "^4.2.0"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
