--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "lexure": "^0.17.0",
     "moment": "^2.29.1",
     "moment-duration-format": "^2.3.2",
+    "mongodb": "^3.6.3",
     "mongoose": "^5.10.15",
+    "mquery": "^3.2.3",
     "ms": "^2.1.2",
     "node-fetch": "^2.6.1",
     "opusscript": "0.0.7",
