--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "canvas": "^2.6.1",
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
+    "date-fns": "^2.16.1",
     "discord.js": "^12.5.1",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
