--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Tyson",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.3.1",
     "@keyv/mongo": "^1.1.0",
     "@types/express": "^4.17.9",
     "@types/express-session": "^1.17.2",
@@ -23,13 +24,14 @@
     "connect-mongo": "^3.2.0",
     "connect-mongodb-session": "^2.4.1",
     "date-fns": "^2.16.1",
-    "discord.js": "^12.5.1",
+    "discord.js": "^13.0.0-dev.02693bc02f45980d8165820a103220f0027b96b7",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "form-urlencoded": "^4.2.1",
     "hastebin": "^0.2.1",
     "join": "^3.0.0",
+    "kahoot-spammer": "^1.1.2",
     "keyv": "^4.0.3",
     "lexure": "^0.17.0",
     "moment": "^2.29.1",
